--- a/style.css
+++ b/style.css
@@ -54,6 +54,7 @@ a{
 background:linear-gradient(to left , #7af444 , white , #7af444);
 height: 800px;
 padding-top: 50px;
+border: 1px solid powderblue;
 
 
 }
