--- a/style3.css
+++ b/style3.css
@@ -54,6 +54,7 @@ img:hover{
 background:linear-gradient(to left , #7af442 , white , #7af442);
 height: 800px;
 padding-top: 50px;
+border: 1px solid powderblue;
 
 
 }
